--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -12,6 +12,7 @@ dependencies {
 
     implementation "com.android.support:support-v4:27.+"
     implementation "androidx.exifinterface:exifinterface:1.2.0"
+    implementation "com.stripe:stripe-android:4.1.2"
 }
 
 
