--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@capacitor/ios": "^2.1.0",
     "@ionic-native/camera": "^5.26.0",
     "@ionic-native/camera-preview": "^5.26.0",
+    "@ionic-native/stripe": "^5.26.0",
     "@ionic-native/youtube-video-player": "^5.26.0",
     "@ionic/pwa-elements": "^1.5.2",
     "@ionic/react": "^5.0.7",
@@ -25,6 +26,7 @@
     "cordova-plugin-androidx-adapter": "^1.1.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-camera-preview": "^0.12.0",
+    "cordova-plugin-stripe": "^1.5.3",
     "cordova-plugin-youtube-video-player": "^2.4.0",
     "ionicons": "^5.0.0",
     "node-sass": "^4.14.1",
@@ -33,9 +35,11 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-webcam": "^5.0.1",
     "sass": "^1.26.5",
-    "typescript": "3.8.3"
+    "typescript": "3.8.3",
+    "use-react-router": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
