--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-measure": "^2.3.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
     "react-webcam": "^5.0.1",
     "sass": "^1.26.5",
+    "styled-components": "^5.1.1",
     "typescript": "3.8.3",
     "use-react-router": "^1.0.7"
   },
